--- a/data/sc/smart_preprocess_dynamic.ipynb
+++ b/data/sc/smart_preprocess_dynamic.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9bedc660",
+   "id": "e2c18311",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "732c706e",
+   "id": "44c480b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,53 +29,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "3939180c",
+   "execution_count": 3,
+   "id": "705c2a9c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "context_click = context[context.click > 0]"
+    "le = LabelEncoder()\n",
+    "context.cust_no = le.fit_transform(context.cust_no)\n",
+    "context.item_id = le.fit_transform(context.item_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "ed2e7177",
+   "execution_count": 4,
+   "id": "1a621fbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_list = context.cust_no.unique()\n",
+    "item_list = context.item_id.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f641468b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/pandas/core/generic.py:5303: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self[name] = value\n"
-     ]
+     "data": {
+      "text/plain": [
+       "576702"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "le = LabelEncoder()\n",
-    "context_click.cust_no = le.fit_transform(context_click.cust_no)\n",
-    "context_click.item_id = le.fit_transform(context_click.item_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "5a9ea5b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user_list = context_click.cust_no.unique()\n",
-    "item_list = context_click.item_id.unique()"
+    "len(user_list)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a11b86c8",
+   "id": "0766b002",
    "metadata": {},
    "source": [
     "## Splitting"
@@ -83,40 +81,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "8b9941cf",
+   "execution_count": 6,
+   "id": "f1833b0d",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_start = 20211217\n",
     "train_end = 20211225\n",
-    "test_end = 20211226"
+    "test_end = 20211226\n",
+    "test_date = test_end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "93471dce",
+   "execution_count": null,
+   "id": "0689a153",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## old version\n",
+    "# def splitting(user_list, train_start, test_date):\n",
+    "#     context_train = context_click[(context_click.date >= train_start) & (context_click.date < test_date)][['cust_no', 'item_id', 'show', 'click']]\n",
+    "#     context_test = context_click[context_click.date == test_date][['cust_no', 'item_id', 'show', 'click']]\n",
+    "    \n",
+    "#     cust_item_pair_train = context_train.groupby(['cust_no', 'item_id'])['click'].sum().reset_index()\n",
+    "#     cust_item_pair_test = context_test.groupby(['cust_no', 'item_id'])['click'].sum().reset_index()\n",
+    "    \n",
+    "#     # cust_item_pair_train = cust_item_pair_train[cust_item_pair_train.click > 0]\n",
+    "#     # cust_item_pair_test = cust_item_pair_test[cust_item_pair_test.click > 0]\n",
+    "    \n",
+    "#     trainUniqueUsers = set(cust_item_pair_train.cust_no.unique())\n",
+    "#     # testUniqueUsers = set(cust_item_pair_test.cust_no.unique())\n",
+    "#     cust_item_pair_test = cust_item_pair_test[cust_item_pair_test.cust_no.isin(trainUniqueUsers)]\n",
+    "    \n",
+    "#     items_by_cust_train = cust_item_pair_train.groupby('cust_no')['item_id'].unique()\n",
+    "#     items_by_cust_test = cust_item_pair_test.groupby('cust_no')['item_id'].unique()\n",
+    "    \n",
+    "#     cust_items_dict_train = dict(items_by_cust_train.apply(list))\n",
+    "#     cust_items_dict_test = dict(items_by_cust_test.apply(list))\n",
+    "#     return cust_items_dict_train, cust_items_dict_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b35f23ec",
    "metadata": {},
    "outputs": [],
    "source": [
     "def splitting(user_list, train_start, test_date):\n",
-    "    context_train = context_click[(context_click.date >= train_start) & (context_click.date < test_date)][['cust_no', 'item_id', 'show', 'click']]\n",
-    "    context_test = context_click[context_click.date == test_date][['cust_no', 'item_id', 'show', 'click']]\n",
-    "    \n",
+    "    context_train = context[(context.date >= train_start) & (context.date < test_date)][['cust_no', 'item_id', 'show','click']]\n",
+    "    trainUniqueUsers = set(context_train.cust_no.unique())\n",
+    "    context_test = context[context.date == test_date][['cust_no', 'item_id','click']]\n",
+    "    context_test = context_test[context_test.cust_no.isin(trainUniqueUsers)]\n",
+    "\n",
     "    cust_item_pair_train = context_train.groupby(['cust_no', 'item_id'])['click'].sum().reset_index()\n",
     "    cust_item_pair_test = context_test.groupby(['cust_no', 'item_id'])['click'].sum().reset_index()\n",
+    "\n",
+    "    cust_no = context_train.cust_no.unique()\n",
+    "    init_df = pd.DataFrame({'cust_no': cust_no})\n",
+    "    combined_train = pd.merge(init_df, cust_item_pair_train, on = 'cust_no', how = 'left')[['cust_no', 'item_id']]\n",
+    "    combined_train.item_id = combined_train.item_id.fillna(-1)\n",
+    "    combined_train.item_id = combined_train.item_id.astype(int)\n",
+    "\n",
+    "    combined_test = pd.merge(init_df, cust_item_pair_test, on = 'cust_no', how = 'left')[['cust_no', 'item_id']]\n",
+    "    combined_test.item_id = combined_test.item_id.fillna(-1)\n",
+    "    combined_test.item_id = combined_test.item_id.astype(int)\n",
     "    \n",
-    "    # cust_item_pair_train = cust_item_pair_train[cust_item_pair_train.click > 0]\n",
-    "    # cust_item_pair_test = cust_item_pair_test[cust_item_pair_test.click > 0]\n",
+    "    combined_train.item_id = combined_train.item_id[combined_train.item_id != -1]\n",
+    "    combined_test.item_id = combined_test.item_id[combined_test.item_id != -1]\n",
     "    \n",
-    "    trainUniqueUsers = set(cust_item_pair_train.cust_no.unique())\n",
-    "    # testUniqueUsers = set(cust_item_pair_test.cust_no.unique())\n",
-    "    cust_item_pair_test = cust_item_pair_test[cust_item_pair_test.cust_no.isin(trainUniqueUsers)]\n",
-    "    \n",
-    "    items_by_cust_train = cust_item_pair_train.groupby('cust_no')['item_id'].unique()\n",
-    "    items_by_cust_test = cust_item_pair_test.groupby('cust_no')['item_id'].unique()\n",
-    "    \n",
+    "    items_by_cust_train = combined_train.groupby('cust_no')['item_id'].unique()\n",
+    "    items_by_cust_test = combined_test.groupby('cust_no')['item_id'].unique()\n",
+    "\n",
     "    cust_items_dict_train = dict(items_by_cust_train.apply(list))\n",
     "    cust_items_dict_test = dict(items_by_cust_test.apply(list))\n",
     "    return cust_items_dict_train, cust_items_dict_test"
@@ -124,8 +161,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "43376394",
+   "execution_count": 17,
+   "id": "7b223a16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +174,8 @@
     "    ## train\n",
     "    file_path = os.path.join(dir_name, 'train.txt')\n",
     "    file = open(file_path,\"w\")\n",
-    "\n",
+    "    print(f'write to file path: {file}')\n",
+    "    counts = 0\n",
     "    for key,value in pairs_dict_train.items():\n",
     "        file.write('%s' % key)\n",
     "        # for item in value:\n",
@@ -151,11 +189,15 @@
     "                else:\n",
     "                    file.write(' %s' % int(item))\n",
     "        file.write('\\n')\n",
+    "        counts += 1\n",
+    "    print(counts)\n",
     "    file.close()\n",
     "    ## test\n",
     "    file_path = os.path.join(dir_name, 'test.txt')\n",
     "    file = open(file_path,\"w\")\n",
-    "\n",
+    "    counts = 0\n",
+    "    print(f'write to file path: {file}')\n",
+    "    \n",
     "    for key,value in pairs_dict_test.items():\n",
     "        file.write('%s' % key)\n",
     "        # for item in value:\n",
@@ -169,13 +211,15 @@
     "                    file.write('\\n')\n",
     "                else:\n",
     "                    file.write(' %s' % int(item))\n",
+    "        counts += 1\n",
+    "    print(counts)\n",
     "    file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "d61256ad",
+   "execution_count": 20,
+   "id": "ebdad599",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,31 +230,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "c1078bbd",
+   "execution_count": 20,
+   "id": "d9629c26",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8852\n",
-      "50\n",
+      "write to file path: <_io.TextIOWrapper name='date=20211226/train.txt' mode='w' encoding='UTF-8'>\n",
+      "450820\n",
+      "write to file path: <_io.TextIOWrapper name='date=20211226/test.txt' mode='w' encoding='UTF-8'>\n",
+      "450820\n",
+      "450820\n",
+      "450820\n",
       "---\n",
-      "9606\n",
-      "105\n",
+      "write to file path: <_io.TextIOWrapper name='date=20211227/train.txt' mode='w' encoding='UTF-8'>\n",
+      "471569\n",
+      "write to file path: <_io.TextIOWrapper name='date=20211227/test.txt' mode='w' encoding='UTF-8'>\n",
+      "471569\n",
+      "471569\n",
+      "471569\n",
       "---\n",
-      "10964\n",
-      "124\n",
+      "write to file path: <_io.TextIOWrapper name='date=20211228/train.txt' mode='w' encoding='UTF-8'>\n",
+      "499850\n",
+      "write to file path: <_io.TextIOWrapper name='date=20211228/test.txt' mode='w' encoding='UTF-8'>\n",
+      "499850\n",
+      "499850\n",
+      "499850\n",
       "---\n",
-      "12372\n",
-      "114\n",
+      "write to file path: <_io.TextIOWrapper name='date=20211229/train.txt' mode='w' encoding='UTF-8'>\n",
+      "528515\n",
+      "write to file path: <_io.TextIOWrapper name='date=20211229/test.txt' mode='w' encoding='UTF-8'>\n",
+      "528515\n",
+      "528515\n",
+      "528515\n",
       "---\n",
-      "13693\n",
-      "64\n",
+      "write to file path: <_io.TextIOWrapper name='date=20211230/train.txt' mode='w' encoding='UTF-8'>\n",
+      "553810\n",
+      "write to file path: <_io.TextIOWrapper name='date=20211230/test.txt' mode='w' encoding='UTF-8'>\n",
+      "553810\n",
+      "553810\n",
+      "553810\n",
       "---\n",
-      "14486\n",
-      "47\n",
+      "write to file path: <_io.TextIOWrapper name='date=20211231/train.txt' mode='w' encoding='UTF-8'>\n",
+      "568892\n",
+      "write to file path: <_io.TextIOWrapper name='date=20211231/test.txt' mode='w' encoding='UTF-8'>\n",
+      "568892\n",
+      "568892\n",
+      "568892\n",
       "---\n"
      ]
     }
@@ -218,6 +286,7 @@
    "source": [
     "for test_date in range(20211226, 20211231+1):\n",
     "    cust_items_dict_train, cust_items_dict_test = splitting(user_list = user_list, train_start = 20211217, test_date = test_date) \n",
+    "    export_file(date = str(test_date), pairs_dict_train = cust_items_dict_train, pairs_dict_test = cust_items_dict_test )\n",
     "    len_tr = len(list(cust_items_dict_train.keys()))\n",
     "    len_te = len(list(cust_items_dict_test.keys()))\n",
     "    print(len_tr)\n",
@@ -228,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7f269d17",
+   "id": "2f7a351d",
    "metadata": {},
    "outputs": [
     {
@@ -257,60 +326,19 @@
     }
    ],
    "source": [
-    "for test_date in range(20211226, 20211231+1):\n",
-    "    cust_items_dict_train, cust_items_dict_test = splitting(user_list = user_list, train_start = 20211217, test_date = test_date) \n",
-    "    len_tr = len(list(cust_items_dict_train.keys()))\n",
-    "    len_te = len(list(cust_items_dict_test.keys()))\n",
-    "    print(len_tr)\n",
-    "    print(len_te)\n",
-    "    print('---')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "0c6ab874",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8852\n",
-      "804\n",
-      "---\n",
-      "9606\n",
-      "1463\n",
-      "---\n",
-      "10964\n",
-      "1532\n",
-      "---\n",
-      "12372\n",
-      "1435\n",
-      "---\n",
-      "13693\n",
-      "857\n",
-      "---\n",
-      "14486\n",
-      "524\n",
-      "---\n"
-     ]
-    }
-   ],
-   "source": [
-    "for test_date in range(20211226, 20211231+1):\n",
-    "    cust_items_dict_train, cust_items_dict_test = splitting(user_list = user_list, train_start = 20211217, test_date = test_date) \n",
-    "    len_tr = len(list(cust_items_dict_train.keys()))\n",
-    "    len_te = len(list(cust_items_dict_test.keys()))\n",
-    "    print(len_tr)\n",
-    "    print(len_te)\n",
-    "    print('---')"
+    "# for test_date in range(20211226, 20211231+1):\n",
+    "#     cust_items_dict_train, cust_items_dict_test = splitting(user_list = user_list, train_start = 20211217, test_date = test_date) \n",
+    "#     len_tr = len(list(cust_items_dict_train.keys()))\n",
+    "#     len_te = len(list(cust_items_dict_test.keys()))\n",
+    "#     print(len_tr)\n",
+    "#     print(len_te)\n",
+    "#     print('---')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "071005a0",
+   "id": "869719a9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -318,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a952908a",
+   "id": "ab8f0e97",
    "metadata": {},
    "outputs": [],
    "source": []
