[FIX] Fix preprocessing mistakes and successfully test

--- a/data/sc/smart_preprocess_dynamic.ipynb
+++ b/data/sc/smart_preprocess_dynamic.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e2c18311",
+   "id": "289d6870",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy as np\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import math\n",
     "import os\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "44c480b7",
+   "id": "a0a2e319",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "705c2a9c",
+   "id": "7811b53e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1a621fbb",
+   "id": "eb59bfcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f641468b",
+   "id": "9ec20e84",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0766b002",
+   "id": "509aaf77",
    "metadata": {},
    "source": [
     "## Splitting"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f1833b0d",
+   "id": "e8130594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0689a153",
+   "execution_count": 7,
+   "id": "91f23ba7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,8 +124,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "b35f23ec",
+   "execution_count": null,
+   "id": "205b46ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_list = context\n",
+    "train_start = 20211217\n",
+    "test_date = 20211226"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7e67a387",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,16 +152,14 @@
     "\n",
     "    cust_no = context_train.cust_no.unique()\n",
     "    init_df = pd.DataFrame({'cust_no': cust_no})\n",
+    "\n",
     "    combined_train = pd.merge(init_df, cust_item_pair_train, on = 'cust_no', how = 'left')[['cust_no', 'item_id']]\n",
-    "    combined_train.item_id = combined_train.item_id.fillna(-1)\n",
-    "    combined_train.item_id = combined_train.item_id.astype(int)\n",
+    "    # combined_train.item_id = combined_train.item_id.astype(int)\n",
     "\n",
     "    combined_test = pd.merge(init_df, cust_item_pair_test, on = 'cust_no', how = 'left')[['cust_no', 'item_id']]\n",
-    "    combined_test.item_id = combined_test.item_id.fillna(-1)\n",
+    "    combined_test.item_id = combined_test.item_id.replace(np.nan, -1)\n",
+    "    combined_test = combined_test[combined_test.item_id != -1]\n",
     "    combined_test.item_id = combined_test.item_id.astype(int)\n",
-    "    \n",
-    "    combined_train.item_id = combined_train.item_id[combined_train.item_id != -1]\n",
-    "    combined_test.item_id = combined_test.item_id[combined_test.item_id != -1]\n",
     "    \n",
     "    items_by_cust_train = combined_train.groupby('cust_no')['item_id'].unique()\n",
     "    items_by_cust_test = combined_test.groupby('cust_no')['item_id'].unique()\n",
@@ -161,8 +171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "7b223a16",
+   "execution_count": 8,
+   "id": "a7c298bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,8 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "ebdad599",
+   "execution_count": null,
+   "id": "3a21c98d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,8 +240,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "d9629c26",
+   "execution_count": null,
+   "id": "bbc2fb5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_date = 20211226\n",
+    "cust_items_dict_train, cust_items_dict_test = splitting(user_list = user_list, train_start = 20211217, test_date = test_date) \n",
+    "# export_file(date = str(test_date), pairs_dict_train = cust_items_dict_train, pairs_dict_test = cust_items_dict_test )\n",
+    "len_tr = len(list(cust_items_dict_train.keys()))\n",
+    "len_te = len(list(cust_items_dict_test.keys()))\n",
+    "print(len_tr)\n",
+    "print(len_te)\n",
+    "print('---')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bde3cd6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6b6328ba",
    "metadata": {},
    "outputs": [
     {
@@ -241,44 +276,44 @@
       "write to file path: <_io.TextIOWrapper name='date=20211226/train.txt' mode='w' encoding='UTF-8'>\n",
       "450820\n",
       "write to file path: <_io.TextIOWrapper name='date=20211226/test.txt' mode='w' encoding='UTF-8'>\n",
+      "54045\n",
       "450820\n",
-      "450820\n",
-      "450820\n",
+      "54045\n",
       "---\n",
       "write to file path: <_io.TextIOWrapper name='date=20211227/train.txt' mode='w' encoding='UTF-8'>\n",
       "471569\n",
       "write to file path: <_io.TextIOWrapper name='date=20211227/test.txt' mode='w' encoding='UTF-8'>\n",
+      "89054\n",
       "471569\n",
-      "471569\n",
-      "471569\n",
+      "89054\n",
       "---\n",
       "write to file path: <_io.TextIOWrapper name='date=20211228/train.txt' mode='w' encoding='UTF-8'>\n",
       "499850\n",
       "write to file path: <_io.TextIOWrapper name='date=20211228/test.txt' mode='w' encoding='UTF-8'>\n",
+      "99623\n",
       "499850\n",
-      "499850\n",
-      "499850\n",
+      "99623\n",
       "---\n",
       "write to file path: <_io.TextIOWrapper name='date=20211229/train.txt' mode='w' encoding='UTF-8'>\n",
       "528515\n",
       "write to file path: <_io.TextIOWrapper name='date=20211229/test.txt' mode='w' encoding='UTF-8'>\n",
+      "98595\n",
       "528515\n",
-      "528515\n",
-      "528515\n",
+      "98595\n",
       "---\n",
       "write to file path: <_io.TextIOWrapper name='date=20211230/train.txt' mode='w' encoding='UTF-8'>\n",
       "553810\n",
       "write to file path: <_io.TextIOWrapper name='date=20211230/test.txt' mode='w' encoding='UTF-8'>\n",
+      "67880\n",
       "553810\n",
-      "553810\n",
-      "553810\n",
+      "67880\n",
       "---\n",
       "write to file path: <_io.TextIOWrapper name='date=20211231/train.txt' mode='w' encoding='UTF-8'>\n",
       "568892\n",
       "write to file path: <_io.TextIOWrapper name='date=20211231/test.txt' mode='w' encoding='UTF-8'>\n",
+      "39022\n",
       "568892\n",
-      "568892\n",
-      "568892\n",
+      "39022\n",
       "---\n"
      ]
     }
@@ -297,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2f7a351d",
+   "id": "7b11df6a",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "869719a9",
+   "id": "6b1c26cb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -346,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab8f0e97",
+   "id": "2aabf985",
    "metadata": {},
    "outputs": [],
    "source": []
