--- a/data/sc/smart_preprocess_retain.ipynb
+++ b/data/sc/smart_preprocess_retain.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e1977da3",
+   "id": "34540bce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8e46eeea",
+   "execution_count": 12,
+   "id": "d36d879a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "060b99d0",
+   "execution_count": 19,
+   "id": "1af4af20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0edb4f3a",
+   "execution_count": 20,
+   "id": "7d194b21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,28 +52,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "02924e68",
+   "execution_count": 33,
+   "id": "93932551",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_df = {}\n",
+    "for i, item in enumerate(item_list):\n",
+    "    subtags_list = np.random.choice([i for i in range(0,8)], 3, replace=False).tolist()\n",
+    "    subtags_list.sort()\n",
+    "    res_df[item] = subtags_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "4e425d7b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "576702"
+       "{1: [1, 3, 4],\n",
+       " 9: [4, 6, 7],\n",
+       " 13: [0, 4, 6],\n",
+       " 5: [3, 5, 6],\n",
+       " 14: [1, 2, 4],\n",
+       " 10: [2, 3, 6],\n",
+       " 8: [4, 6, 7],\n",
+       " 16: [0, 4, 7],\n",
+       " 17: [1, 4, 7],\n",
+       " 2: [0, 3, 5],\n",
+       " 7: [1, 4, 5],\n",
+       " 3: [3, 5, 6],\n",
+       " 18: [2, 4, 5],\n",
+       " 19: [0, 1, 6],\n",
+       " 11: [0, 1, 6],\n",
+       " 4: [1, 6, 7],\n",
+       " 12: [2, 4, 5],\n",
+       " 0: [0, 2, 6],\n",
+       " 15: [1, 2, 5],\n",
+       " 6: [3, 5, 7]}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(user_list)"
+    "res_df"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "91049675",
+   "id": "aa5d6c52",
    "metadata": {},
    "source": [
     "## Splitting"
@@ -82,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "463407e4",
+   "id": "ce12cc03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b3c8159d",
+   "id": "b1873333",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7c836320",
+   "id": "382881bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cf10a54c",
+   "id": "1c7d8446",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a11dbc2e",
+   "id": "a0ac9c26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32e11eb0",
+   "id": "2442dbf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a5160ad6",
+   "id": "47d7627c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "46d19453",
+   "id": "32d11064",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08ab19a6",
+   "id": "fdc695ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dbf15d8e",
+   "id": "b7d9f0af",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "50578004",
+   "id": "3e7a51ff",
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cf63e83",
+   "id": "e7b3209f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1337,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "50768c87",
+   "id": "66e9f730",
    "metadata": {},
    "outputs": [
     {
@@ -1403,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8dc4e10a",
+   "id": "b886c129",
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd8d1690",
+   "id": "59096693",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1452,7 +1485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6b45ee3",
+   "id": "412a6d81",
    "metadata": {},
    "outputs": [],
    "source": []
