[Feature] Can successfully run with tripartite graph

--- a/data/sc/smart_preprocess_retain.ipynb
+++ b/data/sc/smart_preprocess_retain.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "34540bce",
+   "id": "f450c363",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "d36d879a",
+   "execution_count": 2,
+   "id": "1da5ff43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "1af4af20",
+   "execution_count": 3,
+   "id": "354d78b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "7d194b21",
+   "execution_count": 4,
+   "id": "5f215c43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "93932551",
+   "execution_count": 5,
+   "id": "af7f2262",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,36 +66,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "4e425d7b",
+   "execution_count": 6,
+   "id": "f91ec592",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1: [1, 3, 4],\n",
-       " 9: [4, 6, 7],\n",
-       " 13: [0, 4, 6],\n",
-       " 5: [3, 5, 6],\n",
-       " 14: [1, 2, 4],\n",
-       " 10: [2, 3, 6],\n",
-       " 8: [4, 6, 7],\n",
-       " 16: [0, 4, 7],\n",
-       " 17: [1, 4, 7],\n",
-       " 2: [0, 3, 5],\n",
-       " 7: [1, 4, 5],\n",
-       " 3: [3, 5, 6],\n",
-       " 18: [2, 4, 5],\n",
-       " 19: [0, 1, 6],\n",
-       " 11: [0, 1, 6],\n",
-       " 4: [1, 6, 7],\n",
-       " 12: [2, 4, 5],\n",
-       " 0: [0, 2, 6],\n",
-       " 15: [1, 2, 5],\n",
-       " 6: [3, 5, 7]}"
+       "{1: [0, 2, 5],\n",
+       " 9: [0, 3, 5],\n",
+       " 13: [4, 5, 7],\n",
+       " 5: [1, 4, 5],\n",
+       " 14: [0, 4, 6],\n",
+       " 10: [1, 4, 7],\n",
+       " 8: [1, 6, 7],\n",
+       " 16: [2, 3, 4],\n",
+       " 17: [0, 1, 4],\n",
+       " 2: [1, 2, 3],\n",
+       " 7: [0, 1, 7],\n",
+       " 3: [2, 4, 7],\n",
+       " 18: [0, 1, 4],\n",
+       " 19: [0, 3, 7],\n",
+       " 11: [2, 4, 6],\n",
+       " 4: [0, 1, 7],\n",
+       " 12: [1, 4, 5],\n",
+       " 0: [1, 2, 3],\n",
+       " 15: [2, 5, 7],\n",
+       " 6: [2, 3, 5]}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,8 +105,94 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "466edefa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write to txt file\n",
+    "def export_file(date, pairs_dict_train, pairs_dict_test):\n",
+    "    dir_name = f'date={date}'\n",
+    "    if not os.path.isdir(dir_name):\n",
+    "        os.mkdir(dir_name)\n",
+    "    ## train\n",
+    "    file_path = os.path.join(dir_name, 'item_subtag.txt')\n",
+    "    file = open(file_path,\"w\")\n",
+    "    print(f'write to file path: {file}')\n",
+    "    counts = 0\n",
+    "    for key,value in pairs_dict_train.items():\n",
+    "        file.write('%s' % key)\n",
+    "        # for item in value:\n",
+    "        #     file.write('%s ' % item)\n",
+    "        for i, item in enumerate(value):\n",
+    "            if math.isnan(item):\n",
+    "                continue\n",
+    "            else:\n",
+    "                if i == (len(value)-1):\n",
+    "                    file.write(' %s' % int(item))\n",
+    "                else:\n",
+    "                    file.write(' %s' % int(item))\n",
+    "        file.write('\\n')\n",
+    "        counts += 1\n",
+    "    print(counts)\n",
+    "    file.close()\n",
+    "#     ## test\n",
+    "#     file_path = os.path.join(dir_name, 'test_user_subtag.txt')\n",
+    "#     file = open(file_path,\"w\")\n",
+    "#     counts = 0\n",
+    "#     print(f'write to file path: {file}')\n",
+    "    \n",
+    "#     for key,value in pairs_dict_test.items():\n",
+    "#         file.write('%s' % key)\n",
+    "#         # for item in value:\n",
+    "#         #     file.write('%s ' % item)\n",
+    "#         for i, item in enumerate(value):\n",
+    "#             if math.isnan(item):\n",
+    "#                 continue\n",
+    "#             else:\n",
+    "#                 if i == (len(value)-1):\n",
+    "#                     file.write(' %s' % int(item))\n",
+    "#                     file.write('\\n')\n",
+    "#                 else:\n",
+    "#                     file.write(' %s' % int(item))\n",
+    "#         counts += 1\n",
+    "#     print(counts)\n",
+    "    file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c68501a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_date = 20211226"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ba9a7c6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "write to file path: <_io.TextIOWrapper name='date=20211226/item_subtag.txt' mode='w' encoding='UTF-8'>\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "export_file(date = str(test_date), pairs_dict_train = res_df, pairs_dict_test = res_df )"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "aa5d6c52",
+   "id": "6dce83b1",
    "metadata": {},
    "source": [
     "## Splitting"
@@ -115,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ce12cc03",
+   "id": "af27b241",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b1873333",
+   "id": "5ab0249a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "382881bc",
+   "id": "58aca3ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1c7d8446",
+   "id": "e890d60d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a0ac9c26",
+   "id": "2ba30f4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2442dbf4",
+   "id": "15dcaa07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "47d7627c",
+   "id": "4b0094fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "32d11064",
+   "id": "eb1db16d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdc695ad",
+   "id": "8775bce3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b7d9f0af",
+   "id": "03d4c034",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3e7a51ff",
+   "id": "5bc786ab",
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7b3209f",
+   "id": "8972ecd8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1370,7 +1456,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "66e9f730",
+   "id": "ff34da86",
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b886c129",
+   "id": "074ae283",
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59096693",
+   "id": "ad13df74",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1485,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "412a6d81",
+   "id": "ac2dd008",
    "metadata": {},
    "outputs": [],
    "source": []
