--- a/data/sc/preprocess_subtag.ipynb
+++ b/data/sc/preprocess_subtag.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e47fe6c1",
+   "id": "9de30400",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f510dfc3",
+   "id": "5f494e7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1b63f1fc",
+   "id": "9df3be0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8c54339e",
+   "id": "a6bab3e5",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d83e54a0",
+   "id": "ebcaa773",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9323c81b",
+   "id": "c15d365c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8a9d1440",
+   "id": "06002f41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d855fb90",
+   "id": "c288c389",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c16844c1",
+   "id": "7a51d615",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e1cb2040",
+   "id": "72474887",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,8 +246,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "2121ba75",
+   "execution_count": 11,
+   "id": "34d2902a",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "array([20211226])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ce9725ae",
+   "id": "be2823cb",
    "metadata": {},
    "outputs": [
     {
@@ -327,8 +327,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "b6860326",
+   "execution_count": 13,
+   "id": "eacc85b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,8 +337,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "885deee4",
+   "execution_count": 14,
+   "id": "433c87f8",
    "metadata": {},
    "outputs": [
     {
@@ -364,6 +364,7 @@
        "      <th></th>\n",
        "      <th>index</th>\n",
        "      <th>cust_no</th>\n",
+       "      <th>date</th>\n",
        "      <th>mobile_login_90</th>\n",
        "      <th>dd_my</th>\n",
        "      <th>dd_md</th>\n",
@@ -380,6 +381,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>++zmpPGNtNirTv2mCQb9mQ==</td>\n",
+       "      <td>20211226</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -392,8 +394,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>+2csF6o9VzkGxSFb87i3UQ==</td>\n",
+       "      <td>20211226</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -406,8 +409,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>+4f4gQoJE9IF4i+hUbg5XA==</td>\n",
+       "      <td>20211226</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -420,8 +424,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6</td>\n",
+       "      <td>5</td>\n",
        "      <td>+6TjjYio97pnzZ3tr1zSBw==</td>\n",
+       "      <td>20211226</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -434,8 +439,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7</td>\n",
+       "      <td>6</td>\n",
        "      <td>+6sDXXep82BZEI6tTPZEEg==</td>\n",
+       "      <td>20211226</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -451,22 +457,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   index                   cust_no  mobile_login_90  dd_my  dd_md  onlymd_ind  \\\n",
-       "0      0  ++zmpPGNtNirTv2mCQb9mQ==              1.0    0.0    0.0         0.0   \n",
-       "1      3  +2csF6o9VzkGxSFb87i3UQ==              1.0    0.0    1.0         0.0   \n",
-       "2      4  +4f4gQoJE9IF4i+hUbg5XA==              1.0    0.0    0.0         0.0   \n",
-       "3      6  +6TjjYio97pnzZ3tr1zSBw==              1.0    0.0    0.0         0.0   \n",
-       "4      7  +6sDXXep82BZEI6tTPZEEg==              1.0    0.0    0.0         0.0   \n",
+       "   index                   cust_no      date  mobile_login_90  dd_my  dd_md  \\\n",
+       "0      0  ++zmpPGNtNirTv2mCQb9mQ==  20211226              1.0    0.0    0.0   \n",
+       "1      2  +2csF6o9VzkGxSFb87i3UQ==  20211226              1.0    0.0    1.0   \n",
+       "2      3  +4f4gQoJE9IF4i+hUbg5XA==  20211226              1.0    0.0    0.0   \n",
+       "3      5  +6TjjYio97pnzZ3tr1zSBw==  20211226              1.0    0.0    0.0   \n",
+       "4      6  +6sDXXep82BZEI6tTPZEEg==  20211226              1.0    0.0    0.0   \n",
        "\n",
-       "   onlycc_ind  efingo_card_ind  cl_cpa_amt  fc_ind  is_in_context  \n",
-       "0         0.0              0.0         NaN       0           True  \n",
-       "1         0.0              0.0         NaN       0           True  \n",
-       "2         0.0              0.0         NaN       0           True  \n",
-       "3         0.0              0.0    500000.0       0           True  \n",
-       "4         1.0              0.0         NaN       0           True  "
+       "   onlymd_ind  onlycc_ind  efingo_card_ind  cl_cpa_amt  fc_ind  is_in_context  \n",
+       "0         0.0         0.0              0.0         NaN       0           True  \n",
+       "1         0.0         0.0              0.0         NaN       0           True  \n",
+       "2         0.0         0.0              0.0         NaN       0           True  \n",
+       "3         0.0         0.0              0.0    500000.0       0           True  \n",
+       "4         0.0         1.0              0.0         NaN       0           True  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,8 +483,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "9391905d",
+   "execution_count": 15,
+   "id": "b2c140eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,8 +494,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "b12d77ce",
+   "execution_count": 16,
+   "id": "9ced7f88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,41 +504,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "be8f72a1",
+   "execution_count": 20,
+   "id": "b0e4119c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 行銀活躍用戶\n",
-    "active_acct = user_subtag.mobile_login_90\n",
+    "mobile_active = user_subtag.mobile_login_90\n",
     "# 有外幣帳戶\n",
-    "w_fx_acct = user_subtag.dd_my\n",
+    "forex_digital_account = user_subtag.dd_my\n",
     "# 存戶\n",
-    "w_digital_acct = user_subtag.dd_md\n",
+    "account = user_subtag.dd_md\n",
     "# 純存戶\n",
-    "onlymd_acct = user_subtag.onlymd_ind\n",
+    "account_only = user_subtag.onlymd_ind\n",
     "# 純卡戶\n",
-    "onlycc_acct = user_subtag.onlycc_ind\n",
+    "credit_card_only = user_subtag.onlycc_ind\n",
     "# 卡存戶有e.Fingo指定卡\n",
-    "w_efingo_card = user_subtag.efingo_card_ind\n",
+    "card_pi_only_ubear = user_subtag.efingo_card_ind\n",
     "# 有信貸者\n",
-    "w_debit = user_subtag.cl_cpa_amt.notna()\n",
+    "personal_loan_account_cust = user_subtag.cl_cpa_amt.notna()\n",
     "# 無理專顧客\n",
-    "wo_fc = user_subtag.fc_ind == 0"
+    "no_fc_cust = user_subtag.fc_ind == 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "92f0a649",
+   "execution_count": 24,
+   "id": "0b19011b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapping_df = pd.read_excel('subtag.xlsx', sheet_name = 'mapping')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0a353ad4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subtag_03</th>\n",
+       "      <th>code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>mobile_active</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>forex_digital_account</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>account</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>account_only</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>credit_card_only</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>card_pi_only_ubear</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>personal_loan_account_cust</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>no_fc_cust</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    subtag_03  code\n",
+       "0               mobile_active     0\n",
+       "1       forex_digital_account     1\n",
+       "2                     account     2\n",
+       "3                account_only     3\n",
+       "4            credit_card_only     4\n",
+       "5          card_pi_only_ubear     5\n",
+       "6  personal_loan_account_cust     6\n",
+       "7                  no_fc_cust     7"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mapping_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "d5302613",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(mapping_df.loc[mapping_df.subtag_03=='mobile_active']['code'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "dea32810",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_code(tag_name):\n",
+    "    int(mapping_df.loc[mapping_df.subtag_03==tag_name]['code'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24a488bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4fd453bd",
    "metadata": {},
    "outputs": [],
    "source": [
     "res_df = {}\n",
     "for i, ids in enumerate(user_subtag.cust_no):\n",
     "    subtags_list = []\n",
-    "    if active_acct[i]: subtags_list.append(0);\n",
-    "    if w_fx_acct[i]: subtags_list.append(1);\n",
+    "    if mobile_active[i]: subtags_list.append(0);\n",
+    "    if forex_digital_account[i]: subtags_list.append(1);\n",
     "    if w_digital_acct[i]: subtags_list.append(2);\n",
     "    if onlymd_acct[i]: subtags_list.append(3);        \n",
     "    if onlycc_acct[i]: subtags_list.append(4);\n",
@@ -544,22 +697,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "1c0f02b4",
+   "execution_count": null,
+   "id": "53a06312",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'res_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-5423120a5da1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mres_df\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'res_df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "res_df"
    ]
@@ -567,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9efd1fd9",
+   "id": "25579ac1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "46e8128c",
+   "id": "fd3d178d",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "48f99627",
+   "id": "02bb72e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bc95be9",
+   "id": "725901b6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -663,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41560d40",
+   "id": "91ea8e0c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -671,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5907b24c",
+   "id": "7339428e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -679,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "323b4876",
+   "id": "12b91220",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "62eeabf4",
+   "id": "eb92dd3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9dcdea6f",
+   "id": "8d03b038",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "64e6aa39",
+   "id": "a60aa63b",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "87cba22d",
+   "id": "8f11f831",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3eebfc5a",
+   "id": "47bff148",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31588425",
+   "id": "447f3202",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -774,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32ce1513",
+   "id": "c7957442",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -782,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04324efc",
+   "id": "9cef186b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -790,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca9cd44e",
+   "id": "a2e7cda5",
    "metadata": {},
    "outputs": [],
    "source": []
